--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.10",
+    "@nestjs/platform-socket.io": "^10.4.1",
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/throttler": "^5.2.0",
+    "@nestjs/websockets": "^10.4.1",
     "@prisma/client": "^5.16.1",
     "@supabase/supabase-js": "^2.44.2",
     "bcrypt": "^5.1.1",
@@ -41,7 +43,8 @@
     "prisma": "^5.16.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
